--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Authors@R: c(person("Rumenick Pereira da", "Silva", email = "rumenickbf@hotmail.
 Author: Rumenick Pereira da Silva [aut, cre], Dione Maria Valença [aut]
 Description: Uma implementação para análisar dados de sobrevivência, a partir do uso de modelos paramétricos flexíveis de sobrevivência com fração de cura, incluindo os modelos de mistura padrão e tempo de promoção para gama generalizada, F generalizada e Weibull na forma extendida de Marshall Olkin. Além disso, é fornecido um conjunto de ferramentas para potencialiazar os resultados provenientes de um ajuste.
 License: GPL (>= 2)
+URL: https://github.com/Rumenick/flexcure.git
+BugReports: http://github.com/Rumenick/flexcure/issues
 LazyData: TRUE
 Depends: flexsurv (>= 0.6), R (>= 3.0.2)
 Imports: ggplot2 (>= 1.0.1),
