--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,4 @@ URL: https://github.com/Rumenick/flexcure.git
 BugReports: http://github.com/Rumenick/flexcure/issues
 LazyData: TRUE
 Depends: flexsurv (>= 0.6), R (>= 3.0.2)
-Imports: ggplot2 (>= 1.0.1),
-    compiler (>= 3.1.2)
+Imports: ggplot2 (>= 1.0.1)
