--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(curereg,
        coef.curereg,
        logLik.curereg,
        vcov.curereg,
-       predict.curereg,
        plot.curereg,
        lines.curereg,
        curefraction,
@@ -22,5 +21,8 @@ S3method(vcov, curereg)
 S3method(plot, curereg)
 S3method(lines, curereg)
 
-import(flexsurv)
-import(ggplot2)
+import(flexsurvreg, flexsurv)
+import(plot.flexsurvreg, flexsurv)
+import(lines.flexsurvreg, flexsurv)
+
+
