Atualização para uso do pacote roxygen2 e correção de erro na função coef.curereg.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Flexible Parametric Survival Models with Cure Fraction
 Version: 0.1
 Date: 2015-06-11
-Authors@R: c(person("Rumenick Pereira da", "Silva", email = "rumenickbf@hotmail.com", role = c("aut", "cre")), person("Dione Maria", "Valenca", email = "dione@ccet.ufrn.br", role = "aut"))
+Authors@R: c(person("Rumenick Pereira da", "Silva", email = "rumenickps@gmail.com", role = c("aut", "cre")), person("Dione Maria", "Valenca", email = "dione@ccet.ufrn.br", role = "aut"))
 Author: Rumenick Pereira da Silva [aut, cre], Dione Maria Valen\c{c}a [aut]
 Description: The flexcure package provides R implementations for analyze
     survival data, as from flexible parametric survival models with cure fraction.
@@ -14,7 +14,7 @@ Description: The flexcure package provides R implementations for analyze
     time. There are also tools that permit the exploitation of the fit and functions
     to generate a dataset with cure fraction, using one model specific.
 License: GPL (>= 2)
-URL: https://github.com/Rumenick/flexcure.git
+URL: https://github.com/Rumenick/flexcure
 BugReports: http://github.com/Rumenick/flexcure/issues
 LazyData: TRUE
 Depends:
