Atualização para uso de roxygen2 e correção em LRT.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(vcov,curereg)
 export(LRT)
 export(curefraction)
 export(curereg)
+export(dev)
 export(devpt)
 export(devsm)
 export(dexppt)
@@ -24,6 +25,7 @@ export(dllogispt)
 export(dllogissm)
 export(dlnormpt)
 export(dlnormsm)
+export(dmoee)
 export(dmoeept)
 export(dmoeesm)
 export(dmoeev)
@@ -31,6 +33,7 @@ export(dmoeevpt)
 export(dmoeevsm)
 export(dweibullpt)
 export(dweibullsm)
+export(pev)
 export(pevpt)
 export(pevsm)
 export(pexppt)
@@ -45,6 +48,7 @@ export(pllogispt)
 export(pllogissm)
 export(plnormpt)
 export(plnormsm)
+export(pmoee)
 export(pmoeept)
 export(pmoeesm)
 export(pmoeev)
