--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,10 @@ License: GPL (>= 2)
 URL: https://github.com/Rumenick/flexcure
 BugReports: http://github.com/Rumenick/flexcure/issues
 LazyData: TRUE
+LazyLoad: TRUE
 Depends:
-    flexsurv (>= 0.6),
-    R (>= 3.0.2)
+    flexsurv (>= 1.0.0),
+    R (>= 3.3.1)
 RoxygenNote: 5.0.1
 Collate:
     'dpr_generic.R'
