--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ BugReports: http://github.com/Rumenick/flexcure/issues
 LazyData: TRUE
 LazyLoad: TRUE
 Depends:
-    flexsurv (>= 1.0.0),
+    flexsurv (= 1.0.0),
     R (>= 3.3.1)
 RoxygenNote: 5.0.1
 Collate:
